--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -24,7 +24,7 @@ html {
     overflow-x: hidden;
 }
 body {
-    background: #f4f6f6;
+    background: #FFF;
     font-size: 16px;
     font-size: 1.6rem;
     line-height: 1.5em;
@@ -33,7 +33,6 @@ body {
 }
 .page-container,
 .main-container {
-    background: #f4f6f6;
     min-height: 100%;
 }
 
