--- a/templates/forum/category/forum.html
+++ b/templates/forum/category/forum.html
@@ -9,6 +9,13 @@
 
 
 
+{% block breadcrumb %}
+    <li><a href="{{ forum.category.get_absolute_url }}">{{ forum.category.title }}</a></li>
+    <li>{{ forum.title }}</li>
+{% endblock %}
+
+
+
 {% block headline %}
     {{ forum.title }}
 {% endblock %}
@@ -21,15 +28,10 @@
 
 
 
-{% block breadcrumb %}
-    <li><a href="{{ forum.category.get_absolute_url }}">{{ forum.category.title }}</a></li>
-    <li>{{ forum.title }}</li>
-{% endblock %}
-
-
-
-{% block sidebar_actions %}
-    <li><a href="{% url "zds.forum.views.new" %}?forum={{ forum.pk }}" class="ico-after">Nouveau Sujet</a></li>
+{% block new_btn %}
+    <a href="{% url "zds.forum.views.new" %}?forum={{ forum.pk }}" class="new-btn ico-after more blue">
+        Nouveau sujet
+    </a>
 {% endblock %}
 
 
