--- a/templates/base.html
+++ b/templates/base.html
@@ -474,7 +474,7 @@
                     {% endif %}
 
                     {% block content_out %}
-                        <section>
+                        <section class="content-wrapper">
                             <h2>{% block headline %}{% endblock %}</h2>
 
                             {% captureas headlinesub %}
