--- a/templates/base_content_page.html
+++ b/templates/base_content_page.html
@@ -3,11 +3,11 @@
 
 
 {% block content_out %}
-    <article>
+    <article class="content-wrapper">
         <header>
             {% block headline %}{% endblock %}
         </header>
-        <section class="article-content content-wrapper">
+        <section class="article-content">
             {% block content %}{% endblock %}
         </section>
     </article>
