--- a/assets/css/scss/_high-pixel-ratio.scss
+++ b/assets/css/scss/_high-pixel-ratio.scss
@@ -5,15 +5,15 @@
    ========================================================================== */
 
 
-
-@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 4/3), only screen and (min-device-pixel-ratio: 1.3), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx){ 
+// Temporary active @2x on all screens
+//@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 4/3), only screen and (min-device-pixel-ratio: 1.3), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx){ 
     .header-logo-link {
         background-size: 100%;
         background-image: url('../images/logo@2x.png');
     }
     .ico,
     .ico-after:after,
-    .ariane ul li:not(:last-child):after {
+    .breadcrumb ul li:not(:last-child):after {
         background-size: round(image-width(sprite-path($sprite2x)) / 2) round(image-height(sprite-path($sprite2x)) / 2) !important;
         background-image: $sprite2x !important;
     }
@@ -37,7 +37,7 @@
         }
     }
 
-    .ariane ul li:not(:last-child):after {
+    .breadcrumb ul li:not(:last-child):after {
         @include sprite-pos($sprite2x, 'ariane', true);
     }
 
@@ -100,8 +100,8 @@
             &:after {
                 @include sprite-pos($sprite2x, 'tick', true);
             }
-            &.active:after {
-                @include sprite-pos($sprite2x, 'tick-active', true);
+            &.green:after {
+                @include sprite-pos($sprite2x, 'tick-green', true);
             }
             &.white:after {
                 @include sprite-pos($sprite2x, 'tick-white', true);
@@ -131,6 +131,15 @@
             }
             &.blue:after {
                 @include sprite-pos($sprite2x, 'lock-blue', true);
+            }
+        }
+
+        &.more {
+            &:after {
+                @include sprite-pos($sprite2x, 'more', true);
+            }
+            &.blue:after {
+                @include sprite-pos($sprite2x, 'more-blue', true);
             }
         }
         &.cross {
@@ -174,5 +183,14 @@
                 @include sprite-pos($sprite2x, 'star-blue', true);
             }
         }
+
+        &.download {
+            &:after {
+                @include sprite-pos($sprite2x, 'download', true);
+            }
+            &.blue:after {
+                @include sprite-pos($sprite2x, 'download-blue', true);
+            }
+        }
     }
-}
+//}
