Add forgotted title

--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -126,7 +126,7 @@
     {% if perms.forum.change_topic %}
         </ul>
     </div>
-    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico">
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Modération">
         <h3>Modération</h3>
         <ul>
         {% if topic.is_locked %}
