ajaxify up and down votes : issue #8

--- a/templates/article/view_online.html
+++ b/templates/article/view_online.html
@@ -112,3 +112,13 @@
 {% endif %}
 
 {% endblock %}
+
+{% block additionnal-js %}
+    <script type="text/javascript">
+    $(document).ready(function(){
+        {% for post in posts %}
+            vote({{post.pk}});
+        {% endfor %}
+    });
+    </script>
+{% endblock %}
