--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -119,3 +119,13 @@
 {% endif %}
 
 {% endblock %}
+
+{% block additionnal-js %}
+    <script type="text/javascript">
+    $(document).ready(function(){
+        {% for post in posts %}
+            vote({{post.pk}});
+        {% endfor %}
+    });
+    </script>
+{% endblock %}
