--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -25,11 +25,14 @@ $sprite: $sprite2x;
 /**
  * Colors
  */
+$body-background: #F7F7F7;
 $blue: #084561;
 $orange: #F8AD32;
 $header-hover: #396a81;
 $helpful: #e9f9dc;
-$sidebar-hover: #EEE;
+
+$sidebar-background: #F0F0F0;
+$sidebar-hover: #FFF;
 
 // Margins
 $modal-margin: 25px;
