--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -24,7 +24,7 @@ html {
     overflow-x: hidden;
 }
 body {
-    background: #FFF;
+    background: $body-background;
     font-size: 16px;
     font-size: 1.6rem;
     line-height: 1.5em;
@@ -34,7 +34,7 @@ body {
 .page-container,
 .main-container {
     min-height: 100%;
-    background: #FFF;
+    background: $body-background;
 }
 
 hr {
