ajax need static files

--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -3,6 +3,7 @@
 {% load humanize %}
 {% load profile %}
 {% load crispy_forms_tags %}
+{% load staticfiles %}
 
 {% block title %}
     {{ tutorial.title }}
