--- a/assets/css/scss/_high-pixel-ratio.scss
+++ b/assets/css/scss/_high-pixel-ratio.scss
@@ -192,5 +192,14 @@
                 @include sprite-pos($sprite2x, 'download-blue', true);
             }
         }
+
+        &.history {
+            &:after {
+                @include sprite-pos($sprite2x, 'history', true);
+            }
+            &.blue:after {
+                @include sprite-pos($sprite2x, 'history-blue', true);
+            }
+        }
     }
 //}
