Issue #500 : Minor validation for articles and tutorials

--- a/templates/article/view.html
+++ b/templates/article/view.html
@@ -76,6 +76,8 @@
                     <a href="#" data-dropdown="valid-article" >Publier l'article</a>
                     <div id="valid-article" class="f-dropdown small content" data-dropdown-content>
                         <textarea name="comment-v" rows="3" placeholder="Vos commentaires de publication"> </textarea>
+                        <input id="id_is_major" name="is_major" type="checkbox">
+                        <label for="id_is_major">Version majeure ?</label>
                         <button type="submit" class="secondary tiny" name="valid-article">Confirmer la publication</button>
                     </div>
                 </li>
